apps/spoolman/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spoolman
  annotations:
    kopiur.home-operations.com/privileged-movers: "true"
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
