apps/spoolman/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spoolman
  namespace: spoolman
  labels:
    app: spoolman
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: spoolman
  template:
    metadata:
      labels:
        app: spoolman
    spec:
      automountServiceAccountToken: false
      containers:
        - name: spoolman
          image: ghcr.io/donkie/spoolman:0.27.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - SETGID
                - SETUID
            readOnlyRootFilesystem: false
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 120
            periodSeconds: 60
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 5
            failureThreshold: 3
