apps/spoolman/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: spoolman
  namespace: spoolman
  labels:
    app: spoolman
spec:
  serviceName: spoolman
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: spoolman
  template:
    metadata:
      labels:
        app: spoolman
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
      containers:
        - name: spoolman
          image: ghcr.io/donkie/spoolman:0.26.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - SETGID
                - SETUID
            readOnlyRootFilesystem: false
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 120
            periodSeconds: 60
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 5
            failureThreshold: 3
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: linstor-r3
        resources:
          requests:
            storage: 2Gi
