apps/spoolman/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spoolman
  namespace: spoolman
  labels:
    app: spoolman
spec:
  selector:
    app: spoolman
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
